fix: Final fixes