@@ -1,15 +1,14 @@
 package com.campimove.backend.services;
 
 import com.campimove.backend.dtos.IntercampiTimeNotificationDTO;
-import com.campimove.backend.entities.IntercampiRoute;
-import com.campimove.backend.repositories.IntercampiRouteRepository;
+import com.campimove.backend.entities.HorarioOnibus;
+import com.campimove.backend.repositories.HorarioOnibusRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.time.Duration;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.time.LocalTime;
 import java.util.Comparator;
 import java.util.List;
 
@@ -18,40 +17,40 @@ import java.util.List;
 public class IntercampiTimeNotificationService {
 
     @Autowired
-    private IntercampiRouteRepository repository;
+    private HorarioOnibusRepository repository;
 
     public IntercampiTimeNotificationDTO getNextIntercampi() {
 
-        List<IntercampiRoute> routes = repository.findAll();
+        List<HorarioOnibus> routes = repository.findAll();
         if (routes.isEmpty()) return null;
 
-        routes.sort(Comparator.comparing(IntercampiRoute::getSchedule));
+        routes.sort(Comparator.comparing(HorarioOnibus::getHorario));
 
         LocalDate today = LocalDate.now();
         LocalDateTime now = LocalDateTime.now();
 
-        for (IntercampiRoute route : routes) {
-            LocalDateTime scheduleToday = LocalDateTime.of(today, route.getSchedule());
+        for (HorarioOnibus route : routes) {
+            LocalDateTime scheduleToday = LocalDateTime.of(today, route.getHorario());
 
             if (!scheduleToday.isBefore(now)) {
                 long diff = Duration.between(now, scheduleToday).toMinutes();
                 return new IntercampiTimeNotificationDTO(
-                        route.getRoute(),
-                        route.getSchedule(),
+                        route.getOrigem(),
+                        route.getHorario(),
                         diff,
                         format(diff)
                 );
             }
         }
 
-        IntercampiRoute first = routes.get(0);
-        LocalDateTime scheduleTomorrow = LocalDateTime.of(today.plusDays(1), first.getSchedule());
+        HorarioOnibus first = routes.getFirst();
+        LocalDateTime scheduleTomorrow = LocalDateTime.of(today.plusDays(1), first.getHorario());
 
         long diffNextDay = Duration.between(now, scheduleTomorrow).toMinutes();
 
         return new IntercampiTimeNotificationDTO(
-                first.getRoute(),
-                first.getSchedule(),
+                first.getOrigem(),
+                first.getHorario(),
                 diffNextDay,
                 format(diffNextDay)
         );
